Test cases, bechmarks and README.md

--- a/dist.ini
+++ b/dist.ini
@@ -4,13 +4,18 @@ license          = Perl_5
 copyright_holder = Mariano Wahlmann
 copyright_year   = 2013
 
-version          = 0.01
+[AutoVersion]
+format = 0.{{ cldr('yyyyMMdd') }}.{{ cldr('HHmm') }}
 
 [TravisYML]
-
 [@Basic]
 
 [Prereqs]
-Test::More           = 0
+Test::More = 0
 
 [MetaResources]
+homepage          = https://github.com/bluescreen10/Math-FixedPoint
+repository.url    = https://github.com/bluescreen10/Math-FixedPoint.git
+repository.web    = https://github.com/bluescreen10/Math-FixedPoint
+repository.type   = git
+
