--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ perl:
    - "5.12"
    - "5.10"
 
+before_install:
+  - "cpanm Dist::Zilla"
+
 install:
    # Deal with all of the DZIL dependancies, quickly and quietly
    - cpanm --quiet --notest --skip-satisfied Dist::Zilla
