Added documentation and more Dist::Zilla configurations

--- a/dist.ini
+++ b/dist.ini
@@ -1,21 +1,23 @@
 name             = Math-FixedPoint
-author           = Mariano Wahlmann
+author           = Mariano Wahlmann <dichoso _at_ gmail.com>
 license          = Perl_5
 copyright_holder = Mariano Wahlmann
 copyright_year   = 2013
+
+[@Git]
+tag_format = release-%v
 
 [AutoVersion]
 format = 0.{{ cldr('yyyyMMdd') }}.{{ cldr('HHmm') }}
 
 [TravisYML]
+
 [@Basic]
 
 [Prereqs]
 Test::More = 0
 
-[MetaResources]
-homepage          = https://github.com/bluescreen10/Math-FixedPoint
-repository.url    = https://github.com/bluescreen10/Math-FixedPoint.git
-repository.web    = https://github.com/bluescreen10/Math-FixedPoint
-repository.type   = git
+[GithubMeta]
+homepage = https://github.com/bluescreen10/Math-FixedPoint
+
 
